--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,31 @@
 // Начните писать стили здесь
-@import 'normalize';
-@import 'page';
-@import 'page-header';
-@import 'hero';
+@font-face {
+    font-family: "Oswald Medium";
+    src: url("../fonts/oswaldmedium.woff") format("woff"),
+    url("../fonts/oswaldmedium.woff2") format("woff2");
+}
+
+@font-face {
+    font-family: "Oswald Regular";
+    src: url("../fonts/oswaldregular.woff") format("woff"),
+    url("../fonts/oswaldregular.woff2") format("woff2");
+}
+
+$basic_green:#68B738;
+$basic_grey:#F2F2F2;
+$special_grey:#CDCDCD;
+$special_grey2:#666666;
+$special_dark-grey:#444444;
+$special_dark-grey-2:#222222;
+
+@import "normalize";
+@import "page";
+@import "button";
+@import "page-header";
+@import "main-nav";
+@import "hero";
+@import "programs";
+
+.visually-hidden {
+    display: none;
+}
