Стилизация главной страницы

--- a/source/sass/hero.scss
+++ b/source/sass/hero.scss
@@ -1,14 +1,15 @@
 .hero {
   background-color: $basic-green;
-  color: #fff;
+  color: #ffffff;
+
   &__title {
     font-weight: 400;
     font-size: 36px;
   }
+
   &__slogan {
     font-size: 14px;
     text-transform: uppercase;
     font-weight: 400;
   }
 }
-
