--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -1,4 +1,4 @@
 .main-nav {
-    font-family: "Oswald Medium";
-    font-size: 18px;
+  font-family: "Oswald Medium", sans-serif;
+  font-size: 18px;
 }
