--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -1,7 +1,7 @@
 .button {
-    font-family: "Oswald Regular";
-    text-transform: uppercase;
-    color: #fff;
-    text-decoration: none;
-    font-size: 14px;
+  font-family: "Oswald Regular", sans-serif;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 14px;
 }
