--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -1,6 +1,6 @@
 .page {
   &__body {
-    background-color: #fff;
+    background-color: #ffffff;
     font-family: "Oswald Regular", sans-serif;
     font-style: normal;
   }
