--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,3 +5,4 @@ $special_grey:#cdcdcd;
 $special_grey2:#666666;
 $special_dark-grey:#444444;
 $special_dark-grey-2:#222222;
+$special_light-grey: #e7e7e7;
