--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -5,3 +5,9 @@
   font-size: 14px;
   background-color: $basic_green;
 }
+
+.button--grey {
+  background-color: $basic_grey;
+  color: $special_dark-grey;
+  font-size: 16px;
+}
