--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,4 +14,5 @@
 @import "blocks/map";
 @import "blocks/page-footer";
 @import "blocks/copyright";
-@import "blocks/page-form"
+@import "blocks/page-form";
+@import "blocks/catalog";
