Исправления в стилизации каталога

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,7 @@
 @import "blocks/copyright";
 @import "blocks/page-form";
 @import "blocks/catalog";
+@import "blocks/product-card";
+@import "blocks/catalog-extra";
+@import "blocks/product-card-extra";
+@import "blocks/product-promo";
