--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,4 +1,4 @@
-//цвета
+//colors
 $basic_green:#68b738;
 $basic_grey:#f2f2f2;
 $special_grey:#cdcdcd;
@@ -6,3 +6,7 @@ $special_grey2:#666666;
 $special_dark-grey:#444444;
 $special_dark-grey-2:#222222;
 $special_light-grey: #e7e7e7;
+
+//viewports
+$tablet-width: 768px;
+$desktop-width: 1440px;
