--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,7 +5,7 @@
 @import "global/global";
 @import "blocks/page";
 @import "blocks/button";
-//@import "page-header";
+@import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/hero";
 @import "blocks/programs";
@@ -20,3 +20,4 @@
 @import "blocks/catalog-extra";
 @import "blocks/product-card-extra";
 @import "blocks/product-promo";
+@import "blocks/social";
