--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -6,8 +6,16 @@
   display: flex;
   flex-direction: column;
 
+  width: 280px;
+  margin: 0 auto;
+
   @media (min-width: $tablet-width) {
+    width: 630px;
     flex-direction: row;
     justify-content: space-between;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1220px;
   }
 }
