--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     flex-direction: row;
   }
 }
@@ -33,4 +33,17 @@
   text-transform: uppercase;
   color: #000000;
   text-decoration: none;
+}
+
+.programs__container {
+  width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 630px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1220px;
+  }
 }
