--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -36,3 +36,11 @@
     width: 570px;
   }
 }
+
+.map__location {
+  height: 362px;
+
+  @media (min-width: $tablet-width) {
+    height: 400px;
+  }
+}
