Исправлен блок Живой пример

--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -19,6 +19,20 @@
   }
 }
 
+.example__text-wrapper,
+.example__photo-wrapper {
+  width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 630px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+  }
+}
+
 .example__photo {
   background-color: $basic-grey;
 }
@@ -72,4 +86,19 @@
 .example__results-data {
   display: grid;
   grid-template-columns: 50% 50%;
+}
+
+.example__content {
+  @media (min-width: $desktop-width) {
+    background-color: $basic-grey;
+  }
+}
+
+.example__content-wrapper {
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    width: 1220px;
+    margin: 0 auto;
+  }
 }
