--- a/source/sass/blocks/catalog-extra.scss
+++ b/source/sass/blocks/catalog-extra.scss
@@ -3,3 +3,11 @@
   margin: 0;
   padding: 0;
 }
+
+.catalog-extra {
+  display: grid;
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 245px;
+  }
+}
