--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,7 +1,29 @@
 .catalog__list {
+  display: grid;
   list-style: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.catalog__container {
+  width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 630px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1220px;
+  }
 }
 
 .catalog__title {
@@ -12,4 +34,18 @@
 .catalog__subtitle {
   font-size: 24px;
   font-weight: 400;
+}
+
+.catalog__item {
+  min-height: 209px;
+
+  @media (min-width: $tablet-width) {
+    min-height: 512px;
+    width: 324px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 511px;
+    width: 245px;
+  }
 }
