--- a/source/sass/blocks/product-card-extra.scss
+++ b/source/sass/blocks/product-card-extra.scss
@@ -6,9 +6,14 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 4fr 2fr 1fr;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-rows: 1fr;
+    grid-template-columns: 3fr 2fr 1fr 245px;
   }
 }
 
@@ -28,7 +33,7 @@
     grid-column-start: span 2;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
     grid-column-start: span 3;
   }
 }
@@ -44,6 +49,10 @@
 .product-card-extra__weight {
   @media (min-width: $tablet-width) and (max-width: $desktop-width) {
     text-align: right;
+  }
+
+  @media (max-width: $desktop-width) {
+    text-align: left;
   }
 }
 
