--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -2,8 +2,12 @@
   text-transform: uppercase;
   color: #ffffff;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 20px;
+  padding: 10px;
   background-color: $basic_green;
+  text-align: center;
+  display: block;
   text-align: center;
 }
 
