--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,22 +1,50 @@
 .hero {
   color: #ffffff;
-  background-color: $basic-green;
+  //background-color: $basic-green;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     background-color: #ffffff;
     color: #000000;
+  }
+
+  &::before {
+    display: block;
+    content: "";
+    z-index: -2;
+    width: 100%;
+    height: 302px;
+    background: url("../../img/bg-mobile.png") no-repeat center;
+    position: absolute;
+    top: 0;
+  }
+
+  &::after {
+    display: block;
+    content: "";
+    z-index: -1;
+    width: 100%;
+    height: 302px;
+    background: rgba(104, 183, 56, 0.85);
+    position: absolute;
+    top: 0;
   }
 }
 
 .hero__title {
   font-weight: 400;
   font-size: 36px;
+  margin: 0;
+  padding: 27px 0;
+  text-align: center;
 }
 
 .hero__slogan {
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 400;
+  text-align: center;
+  margin-bottom: 29px;
 }
 
 .hero__container {
@@ -24,10 +52,18 @@
   margin: 0 auto;
 
   @media (min-width: $tablet-width) {
-    width: 630px;
+    width: 708px;
   }
 
   @media (min-width: $desktop-width) {
     width: 1220px;
+  }
+}
+
+.hero__button {
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    padding: 17px;
+    display: inline-block;
   }
 }
