--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -2,7 +2,24 @@
   font-family: "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
-  line-height: 18px;
+  //line-height: 18px;
+  line-height: 36px;
   color: $special_dark-grey;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.copyright {
+  position: relative;
+}
+
+.copyright__icon {
+  position: absolute;
+  right: 0;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    left: 1em;
+  }
 }
