--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -14,7 +14,10 @@
     z-index: -2;
     width: 100%;
     height: 302px;
-    background: url("../../img/bg-mobile.png") no-repeat center;
+    background-color: #48474c;
+    background-image: url("../../img/bg-mobile.png");
+    background-position-x: calc(50% - 36px);
+    background-repeat: no-repeat;
     position: absolute;
     top: 0;
   }
@@ -37,6 +40,14 @@
   margin: 0;
   padding: 27px 0;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    text-align: left;
+    color: #000000;
+    width: 420px;
+  }
 }
 
 .hero__slogan {
@@ -45,6 +56,13 @@
   font-weight: 400;
   text-align: center;
   margin-bottom: 29px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    text-align: left;
+    color: #000000;
+  }
 }
 
 .hero__container {
@@ -52,11 +70,14 @@
   margin: 0 auto;
 
   @media (min-width: $tablet-width) {
-    width: 708px;
+    width: 570px;
+    min-height: 850px;
+    position: relative;
   }
 
   @media (min-width: $desktop-width) {
     width: 1220px;
+    min-height: 696px;
   }
 }
 
@@ -65,5 +86,17 @@
     font-size: 20px;
     padding: 17px;
     display: inline-block;
+  }
+}
+
+.hero__img {
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    right: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    z-index: 2;
+    right: 400px;
   }
 }
