--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -31,6 +31,34 @@
 }
 
 .page-header__logo {
-  display: block;
+  display: flex;
+  align-items: center;
   height: 66px;
+}
+
+@media (min-width: $desktop-width) {
+  .page-header::before {
+    content: "";
+    background-color: #3e3e42;
+    background-image: url("../../img/bg-desktop.png");
+    background-repeat: no-repeat;
+    display: block;
+    width: 100%;
+    height: 696px;
+    position: absolute;
+    left: 50%;
+    z-index: 1;
+  }
+
+  .page-header::after {
+    display: block;
+    content: "";
+    z-index: 1;
+    width: 100%;
+    height: 696px;
+    background: rgba(104, 183, 56, 0.85);
+    position: absolute;
+    left: 50%;
+    top: 0;
+  }
 }
