--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -8,18 +8,26 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-gap: 20px;
+
+  @media (min-width: $tablet-width) {
+    grid-gap: 30px;
+  }
 
   @media (min-width: $desktop-width) {
-    flex-direction: row;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 80px;
   }
 }
 
 .programs__item {
   background-color: $basic-grey;
   padding: 20px;
-  margin-top: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 50px;
+  }
 }
 
 .programs__title {
@@ -29,6 +37,67 @@
   font-weight: 400;
   margin: 0;
   padding: 10px 0;
+  display: flex;
+  align-items: center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    position: relative;
+  }
+}
+
+.programs__item--lose .programs__title::before {
+  content: "";
+  background-image: url("../../img/icon-cat-slim.svg");
+  background-size: cover;
+  width: 50px;
+  height: 53px;
+  display: inline-block;
+  margin-right: 20px;
+
+  @media (min-width: $tablet-width) {
+    width: 200px;
+    height: 212px;
+    position: absolute;
+    right: 0;
+    top: 10px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    width: 100px;
+    height: 106px;
+    margin-right: 50px;
+    top: 0;
+    left: 0;
+  }
+}
+
+.programs__item--gain .programs__title::before {
+  content: "";
+  background-image: url("../../img/icon-cat-muscle.svg");
+  background-size: cover;
+  width: 67px;
+  height: 50px;
+  display: inline-block;
+  margin-right: 12px;
+
+  @media (min-width: $tablet-width) {
+    width: 268px;
+    height: 200px;
+    position: absolute;
+    right: -30px;
+    top: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    width: 134px;
+    height: 100px;
+    margin-right: 50px;
+    top: 0;
+    left: 0;
+  }
 }
 
 .programs__description {
@@ -40,12 +109,35 @@
   margin: 0 0 20px 0;
   padding: 15px 0;
   border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    border: none;
+  }
 }
 
 .programs__link {
   text-transform: uppercase;
   color: #000000;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+
+  &::after {
+    content: "";
+    background-image: url("../../img/icon-arrow-right.svg");
+    width: 24px;
+    height: 12px;
+    display: inline-block;
+    position: relative;
+    left: 1em;
+  }
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .programs__container {
@@ -58,5 +150,25 @@
 
   @media (min-width: $desktop-width) {
     width: 1220px;
+  }
+}
+
+.programs__item--lose .programs__description {
+  @media (min-width: $tablet-width) {
+    width: 377px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+  }
+}
+
+.programs__item--gain .programs__description {
+  @media (min-width: $tablet-width) {
+    width: 342px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
   }
 }
