--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -7,5 +7,12 @@
 
   @media (min-width: $tablet-width) {
     margin-right: 12px;
+    width: 60px;
+    height: 50px;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 70px;
+    height: 60px;
   }
 }
