--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -36,6 +36,13 @@
   height: 66px;
 }
 
+.page-header {
+  @media (min-width: $desktop-width) {
+    position: relative;
+    overflow: hidden;
+  }
+}
+
 @media (min-width: $desktop-width) {
   .page-header::before {
     content: "";
