--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -7,7 +7,12 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
+  margin: 0;
   padding: 25px 0;
+  display: inline-block;
+  background-color: #ffffff;
+  position: relative;
+  z-index: 2;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
@@ -197,7 +202,6 @@
   }
 }
 
-.page-form__subtitle,
 .page-form__container {
   width: 280px;
   margin: 0 auto;
@@ -231,5 +235,23 @@
   @media (min-width: $desktop-width) {
     grid-gap: 80px;
     padding: 60px 0;
+  }
+}
+
+.page-form__delimiter {
+  position: relative;
+}
+
+.page-form__delimiter::before {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: $basic_green;
+  position: absolute;
+  z-index: 1;
+  top: 40px;
+
+  @media (min-width: $tablet-width) {
+    top: 90px;
   }
 }
