--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -46,16 +46,6 @@
   }
 }
 
-.page-form__textarea {
-  width: 100%;
-  min-height: 150px;
-  resize: none;
-
-  @media (min-width: $desktop-width) {
-    min-height: 174px;
-  }
-}
-
 .page-form__label--extra {
   color: #000000;
 }
@@ -91,6 +81,22 @@
   box-sizing: border-box;
   //width: auto;
   flex-grow: 1;
+  padding: 0 1em;
+
+  @media (min-width: $tablet-width) {
+    height: 52px;
+  }
+}
+
+.page-form__textarea {
+  width: 100%;
+  min-height: 150px;
+  resize: none;
+  padding: 0.6em 1em;
+
+  @media (min-width: $desktop-width) {
+    min-height: 174px;
+  }
 }
 
 .page-form__button {
@@ -122,6 +128,7 @@
 .page-form__customer-info {
   //margin-bottom: 10px;
   display: grid;
+  align-content: space-between;
   grid-gap: 14px;
 
   @media (min-width: $tablet-width) {
@@ -133,12 +140,12 @@
 .page-form__customer-goal {
   box-sizing: border-box;
   display: grid;
-  grid-gap: 14px;
+  grid-gap: 13px;
 
   @media (min-width: $tablet-width) {
     border: 1px solid $special_light-grey;
-    padding: 10px 25px;
-    grid-gap: 20px;
+    padding: 24px;
+    //grid-gap: 20px;
   }
 }
 
@@ -254,4 +261,40 @@
   @media (min-width: $tablet-width) {
     top: 90px;
   }
+}
+
+.page-form__radio {
+  display: none;
+}
+
+.page-form__radio+.page-form__label {
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.page-form__radio+.page-form__label::before {
+  content: "";
+  display: inline-block;
+  margin-right: 1em;
+  box-sizing: border-box;
+  width: 40px;
+  height: 40px;
+  background-color: #ffffff;
+  border: 1px solid $special_grey;
+  border-radius: 50%;
+}
+
+.page-form__radio:checked+.page-form__label::after {
+  content: "";
+  display: inline-block;
+  margin-right: 20px;
+  width: 18px;
+  height: 18px;
+  background-color: $basic_green;
+  border-radius: 50%;
+  position: absolute;
+  left: 11px;
+  top: 11px;
 }
