--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -88,7 +88,7 @@
 }
 
 .page-form__checkbox:checked + .page-form__label::before {
-  background-image: url("../../img/icon-check.svg");
+  background-image: url("../img/icon-check.svg");
   background-position: center center;
   background-repeat: no-repeat;
 }
