--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -10,11 +10,12 @@
   display: flex;
   flex-direction: column;
 
-  width: 280px;
-  margin: 0 auto;
+  //width: 280px;
+  //margin: 0 auto;
 
   @media (min-width: $tablet-width) {
     width: 708px;
+    margin: 0 auto;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -51,5 +52,7 @@
 
   @media (max-width: $mobile-width-only) {
     padding: 20px 0;
+    width: 280px;
+    margin: 0 auto;
   }
 }
