--- a/source/sass/blocks/product-card-extra.scss
+++ b/source/sass/blocks/product-card-extra.scss
@@ -2,7 +2,7 @@
   display: grid;
 
   @media (max-width: $tablet-width) {
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: minmax(30px, max-content) minmax(30px, max-content) 1fr;
     grid-template-columns: 1fr 1fr;
   }
 
@@ -14,27 +14,36 @@
   @media (min-width: $desktop-width) {
     grid-template-rows: 1fr;
     grid-template-columns: 3fr 2fr 1fr 245px;
+    align-items: center;
   }
 }
 
 .product-card-extra__name {
   font-size: 16px;
+  line-height: 16px;
   font-weight: 400;
   text-transform: uppercase;
   color: $special_dark-grey-2;
 
-  @media (max-width: $tablet-width) {
-    grid-column-start: span 2;
+  @media (max-width: $mobile-width-only) {
+    grid-column: span 2;
+  }
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
   }
 }
 
 .product-card-extra__link {
-  @media (max-width: $tablet-width) {
-    grid-column-start: span 2;
+  grid-column: span 2;
+
+  @media (min-width: $tablet-width) {
+    grid-column: span 3;
   }
 
-  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
-    grid-column-start: span 3;
+  @media (min-width: $desktop-width) {
+    grid-column: auto;
   }
 }
 
@@ -42,8 +51,13 @@
 .product-card-extra__price {
   font-family: "Arial", sans-serif;
   font-size: 14px;
+  line-height: 20px;
   font-weight: 400;
   color: $special_dark-grey;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+  }
 }
 
 .product-card-extra__weight {
@@ -58,4 +72,8 @@
 
 .product-card-extra__price {
   text-align: right;
+
+  @media (min-width: $desktop-width) {
+    padding-right: 38px;
+  }
 }
