--- a/source/sass/blocks/product-card-extra.scss
+++ b/source/sass/blocks/product-card-extra.scss
@@ -1,12 +1,9 @@
 .product-card-extra {
   display: grid;
+  grid-template-rows: minmax(30px, max-content) minmax(30px, max-content) 1fr;
+  grid-template-columns: 1fr 1fr;
 
-  @media (max-width: $tablet-width) {
-    grid-template-rows: minmax(30px, max-content) minmax(30px, max-content) 1fr;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 4fr 2fr 1fr;
   }
